--- a/Frontend/css/main.css
+++ b/Frontend/css/main.css
@@ -65,6 +65,21 @@ form {
 	color: red;
 }
 
+.success {
+	color: green;
+}
+
+.fromWord {
+	font-size: 150%;
+	padding: 8px;
+}
+
+.toWord {
+	font-size: 150%;
+	padding: 8px;
+	color: green;
+}
+
 .card-1 {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
