--- a/fe2/lib/components/app_component/app.html
+++ b/fe2/lib/components/app_component/app.html
@@ -1,2 +1,5 @@
-<header class="card-2">SpanCard</header>
+<header class="card-2">
+  <span class="title left">SpanCard</span>
+  <button class="right" *ngIf="loggedIn" (click)="logout()">logout</button>
+</header>
 <router-outlet></router-outlet>
