--- a/fe2/lib/components/app_component/app.html
+++ b/fe2/lib/components/app_component/app.html
@@ -1,5 +1,2 @@
-<header class="card-2">
-  <span class="title left">SpanCard</span>
-  <button class="right" *ngIf="loggedIn" (click)="logout()">logout</button>
-</header>
+<header class="card-2">SpanCard</header>
 <router-outlet></router-outlet>
