--- a/fe2/lib/components/login/login.html
+++ b/fe2/lib/components/login/login.html
@@ -1,13 +1,13 @@
-<span class="error" id="loginError">{{ errorMessage }}</span>
+<span class="error" id="loginError"></span>
 <div id="loginBox">
-  <form id="loginForm" (ngSubmit)="submitLogin()">
+  <form id="loginForm" onsubmit="return submitLogin();">
     <label for="username">Username </label><br>
-    <input type="text" [(ngModel)]="username" required><br>
+    <input type="text" name="username" required><br>
     <label for="password">Password </label><br>
-    <input type="password" [(ngModel)]="password" required><br>
+    <input type="password" name="password" required><br>
     <input type="submit" value="Login">
   </form>
 
   <span>You need an account to use SpanCard. Create one now, it only takes 15 seconds.</span><br>
-  <button (click)="showCreateAccount($event)">Create account</button>
+  <button onclick="showCreateAccount();">Create account</button>
 </div>
