More work on migrating to angular

--- a/fe2/lib/components/login/login.html
+++ b/fe2/lib/components/login/login.html
@@ -1,3 +1,4 @@
+<spancard-header></spancard-header>
 <span class="error" id="loginError">{{ errorMessage }}</span>
 <div id="loginBox">
   <form id="loginForm" (ngSubmit)="submitLogin()">
