--- a/fe2/lib/components/lookup/lookup.html
+++ b/fe2/lib/components/lookup/lookup.html
@@ -1,3 +1,4 @@
+<spancard-header></spancard-header>
 <div id="welcomeMessage">Welcome to SpanCard!</div>
 <div id="lookupHolder">
   <form id="lookupForm" (ngSubmit)="lookupWord()">
