--- a/fe2/lib/components/create_user/create_user.html
+++ b/fe2/lib/components/create_user/create_user.html
@@ -1,3 +1,4 @@
+<spancard-header></spancard-header>
 <form id="createAccountForm" onsubmit="return createAccount();">
   <label for="username">Pick a username </label><br>
   <input type="text" name="username" required><br>
