Migrated flashcard practice to angular frontend

--- a/fe2/lib/components/lookup/lookup.html
+++ b/fe2/lib/components/lookup/lookup.html
@@ -19,6 +19,6 @@
   </div>
   <button (click)="addToFlashcardSet()">Add to flashcard set</button>
   <span class="error">{{ addWordErrorMessage }}</span>
-  <span class="sucess">{{ addWordSuccessMessage }}</span>
+  <span class="success">{{ addWordSuccessMessage }}</span>
 </div>
 <button (click)="startPractice()">Practice with flashcards</button>
